# IntegrationTestFrameworkDoctest

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake_clang.yml  cmake_ubuntu.yml  cmake_windows.yml
IntegrationTest/: CMakeLists.txt  IT_Util.h  IntegrationTest.cpp  IntegrationTest.h  SignalThread.h
Logger/it/: CMakeLists.txt  Logger_IT.cpp
Logger/src/: CMakeLists.txt  LogData.cpp  LogData.h  Logger.cpp  Logger.h
Port/src/: IT_Client.h
